@@ -1072,8 +1072,8 @@ are just STE enhanced.  These are marked with '*'.</p>
     </tr>
     <tr>
       <td>Utopos</td>
-      <td>1.2</td>
-      <td>&nbsp;</td>
+      <td>1.4</td>
+      <td>Screen was flickering with previous version of Hatari</td>
     </tr>
     <tr>
       <td>Ultimate Arena</td>
@@ -1348,8 +1348,8 @@ are just STE enhanced.  These are marked with '*'.</p>
     <tr>
       <td>Unit 17:
       <a href="http://www.pouet.net/prod.php?which=30912">E.P.S.S. Demo</a></td>
-      <td class="minor">1.2</td>
-      <td>Bottom border content garbage due to bad blitter timing emulation</td>
+      <td>1.4</td>
+      <td>Video counter is modified while display is ON</td>
     </tr>
     <tr>
       <td>Zeal:
